--- a/src/app/Components/survey/survey.component.html
+++ b/src/app/Components/survey/survey.component.html
@@ -1,36 +1,91 @@
-<p>survey works!</p>
 
-<button class="btn btn-outline-warning mr-2" [routerLink]="['/addsurvey']" >Ajouter</button>
+<app-head></app-head>
+<app-header></app-header>
+<!-- tabda mn hneeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee -->
 
-<table class="table table-striped" >
-    <thead style="background-color: #c61bb2 ;">
-        <tr>
-          <th scope="col">ID</th>
-          <th scope="col">Content</th>
-          <th scope="col">dateExp</th>
-          
-          <th>Modify</th>
-          <th>Delete</th>
-          
-        </tr>
-      </thead>
-<tbody>
-<tr *ngFor="let m of SurveyQuestion">
-        
-    <td>
-        {{m.id}}
-    </td>
-    <td> 
-        {{m.content}}
-    </td>
-    <td>
-        {{m.dateExp}}
-    </td>
-    <td>
-        <button class="btn btn-outline-warning mr-2" (click)="UpdateRoute(m.id)" >Update</button>
-    </td>
-    <td><button class="btn btn-outline-danger mr-2" (click)="deleteSurvey(m)">Delete </button></td>
+<!DOCTYPE html>
+<html lang="en-US">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-</tr>
-</tbody>
-</table>
+    
+    
+    
+    
+    <!-- CUSTOM STYLE -->      
+    
+    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,700,900&amp;subset=latin-ext" rel="stylesheet"> 
+    <script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
+    <script type="text/javascript" src="js/jquery-ui.min.js"></script>   
+  </head>
+
+  <body class="size-1280">
+    
+    
+    <!-- MAIN -->
+    <main role="main">    
+      <!-- Header -->
+      <header class="section-top-padding background-image text-center" style="background-image:url(../../../assets/zz.jpg)">
+        <h1 class="text-extra-thin text-white text-s-size-30 text-m-size-40 text-size-50 text-line-height-1 margin-bottom-40 margin-top-130">
+          Save your Time and Keep Calm
+        </h1>
+        <!-- Image -->
+        <!-- <img class="margin-top-20 center" src="img/app.png" alt=""> -->
+        
+        
+      </header>
+      
+     
+      
+      <!-- Section 2 -->
+      
+      <section class="section-top-padding background-white">
+        <div class="line text-center">
+          <i class="icon-sli-heart text-primary text-size-40 " style="color: #21ABA5;"></i>
+          <h2 class="text-dark text-size-50 text-m-size-40">Survey <b>Question</b></h2>
+          <hr class="break background-primary break-small break-center margin-bottom-50">
+        </div>
+        <div style="display:flex;flex-wrap:wrap;"></div>
+        <div class="line"  >
+          <div class="margin2x" *ngFor="let m of SurveyQuestion" >
+            <div class="s-12 m-6 l-4 margin-bottom-60">
+              <div class="float-left">
+                <i class="icon-sli-layers text-primary text-size-40 text-line-height-1"></i>
+
+              </div>
+              <div class="margin-left-60">
+                <h3 class="text-strong text-size-20 text-line-height-1 margin-bottom-20">Question:</h3>
+                <p style="font-size: x-large;margin-bottom: 10px;"> {{m.content}} <br></p>
+                <p style="font-size: -large;">NB:</p>
+                    <p > question will be removed in this date if 
+                     you are interessed please answer before that :  <br>
+                     {{m.dateExp}}</p>
+                <a class="text-more-info text-primary"  (click)="UpdateRoute(m.id)">ajouterReponse </a>                
+              </div>
+            </div>
+        </div>
+          </div>
+        
+       
+      </section>
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
+    </main>
+    
+    
+    <script type="text/javascript" src="js/responsee.js"></script>
+    <script type="text/javascript" src="owl-carousel/owl.carousel.js"></script>
+    <script type="text/javascript" src="js/template-scripts.js"></script> 
+  </body>
+</html>
+<app-footer></app-footer>
+<app-scripts></app-scripts>
