--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -41,7 +41,7 @@
 
     <!-- navbar container start -->
     <div class="navbar-container navbar-sticky sticky fade_down_effect">
-        <div class="container">
+        <div class="">
             <nav class="navbar navbar-light xs-navbar navbar-expand-lg">
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#primary-nav" aria-controls="primary-nav" aria-expanded="false" aria-label="Toggle navigation">
@@ -77,6 +77,10 @@
                                             <li class="nav-button" style="background-color: #1fb79b;">
                             <a href="#" class="quote-btn"> Click To Login                           </a>
                         </li>
+                        <li class="nav-button" style="background-color: #1fb79b;">
+                            <a [routerLink]="['/Dashboard']" class="quote-btn"> Dashboard                           </a>
+                        </li>
+                        
                     
                 </ul><!-- Right menu end -->
 
