--- a/src/app/BackEnd/management/management.component.html
+++ b/src/app/BackEnd/management/management.component.html
@@ -134,15 +134,9 @@
             <ul class="menu-content">
                 <li class=" nav-item"><a [routerLink]="['/Dashboard/UserEvents']"><i class="feather icon-plus-square"></i><span class="menu-item" data-i18n="Apex">UserEvents</span></a>
                 </li>
-                <li class=" nav-item"><a href="form-wizard.html"><i class="feather icon-heart"></i><span class="menu-title" data-i18n="Form Wizard">User Liked Events</span></a>
+                <li class=" nav-item"><a [routerLink]="['/Dashboard/UserLikes']"><i class="feather icon-heart"></i><span class="menu-title" data-i18n="Form Wizard">UserLikes</span></a>
                 </li>
                 <li class=" nav-item"><a href="form-wizard.html"><i class="feather icon-share-2"></i><span class="menu-title" data-i18n="Form Wizard">Send Rewards</span></a>
-                </li>
-                <li class=" nav-item"><a href="form-wizard.html"><i class="feather icon-thumbs-up"></i><span class="menu-title" data-i18n="Form Wizard">Like UserEvent</span></a>
-                </li>
-                <li class=" nav-item"><a href="form-wizard.html"><i class="feather icon-thumbs-down"></i><span class="menu-title" data-i18n="Form Wizard">DisLike UserEvent</span></a>
-                </li>
-                <li class=" nav-item"><a href="form-wizard.html"><i class="feather icon-star"></i><span class="menu-title" data-i18n="Form Wizard">Recommended Events </span></a>
                 </li>
             </ul>
         </li>
