--- a/src/app/BackEnd/nav/nav.component.html
+++ b/src/app/BackEnd/nav/nav.component.html
@@ -86,7 +86,7 @@
 <div class="main-menu menu-fixed menu-dark menu-accordion menu-shadow" data-scroll-to-active="true">
     <div class="navbar-header">
         <ul class="nav navbar-nav flex-row">
-            <li class="nav-item mr-auto"><a class="navbar-brand" href="../../../html/ltr/vertical-menu-template-semi-dark/index.html">
+            <li class="nav-item mr-auto"><a class="navbar-brand" [routerLink]="['']">
                     <img src="/assets/app-assets/images/logo/favicon.ico"/>
                     <h2 class="brand-text mb-0">WorkMood</h2>
                 </a></li>
