--- a/src/app/BackEnd/Events/show-users-events/show-users-events.component.html
+++ b/src/app/BackEnd/Events/show-users-events/show-users-events.component.html
@@ -6,6 +6,23 @@
         <div class="content-header row">
         </div>
         <div class="content-body">  
+            <link rel="stylesheet" type="text/css" href="/assets/app-assets/css/pages/knowledge-base.css">
+            <section id="knowledge-base-search">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="card knowledge-base-bg black" >
+                            <div class="card-content">
+                                <div class="card-body p-sm-4 p-2">
+                                    <h1 class="white">Welcome to The Show User Events Section</h1>
+                                    <p class="card-text mb-2">
+                                        You can find below the All The Joined Events Of The Selected user .
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <div class="col-lg-12">
                 <input
                 type="text"
