--- a/src/app/BackEnd/badges/show-user-badges/show-user-badges.component.css
+++ b/src/app/BackEnd/badges/show-user-badges/show-user-badges.component.css
@@ -250,3 +250,8 @@ button{
     opacity: 0;
   }
 }
+.knowledge-base-bg {
+  background: url(/assets/Images/Evenements/Access.jpg) no-repeat;
+    background-size: auto;
+  background-size: cover;
+}
