--- a/src/app/BackEnd/management/management.component.html
+++ b/src/app/BackEnd/management/management.component.html
@@ -136,7 +136,7 @@
                 </li>
                 <li class=" nav-item"><a [routerLink]="['/Dashboard/UserLikes']"><i class="feather icon-heart"></i><span class="menu-title" data-i18n="Form Wizard">UserLikes</span></a>
                 </li>
-                <li class=" nav-item"><a href="form-wizard.html"><i class="feather icon-share-2"></i><span class="menu-title" data-i18n="Form Wizard">Send Rewards</span></a>
+                <li class=" nav-item"><a [routerLink]="['/Dashboard/SendRewards']"><i class="feather icon-share-2"></i><span class="menu-title" data-i18n="Form Wizard">Send Rewards</span></a>
                 </li>
             </ul>
         </li>
