--- a/src/app/BackEnd/Events/send-rewards/send-rewards.component.css
+++ b/src/app/BackEnd/Events/send-rewards/send-rewards.component.css
@@ -1,5 +1,5 @@
 .knowledge-base-bg {
-    background: url(/assets/Images/Evenements/UserJoined.jpg) no-repeat;
+    background: url(/assets/Images/Evenements/Rewards.png) no-repeat;
       background-size: auto;
     background-size: cover;
 }
