--- a/src/app/Components/Evenements/likedevents/likedevents.component.html
+++ b/src/app/Components/Evenements/likedevents/likedevents.component.html
@@ -103,9 +103,9 @@
                                 
                             </div>
                               <h2 class="ts-post-title"><a href="https://demo.themewinter.com/wp/buildbench/blog/2019/03/21/support-development-for-more-experience-3/">{{x.description}}</a></h2>
-                               
-                              <button href="javascript:void(0)" class="btn btn p-3" style="background-color: #1fb79b; color:white;width:48%;" (click)="QuitEvent()"> Join <i class="fa fa-plus"></i> </button>&nbsp;
-                              <button href="javascript:void(0)" class="btn btn"style="background-color: #21aea6; color:white;width:48%" (click)="LikeEvent()"> like <i class="fa fa-heart"></i> </button><br><br>
+                              <button href="javascript:void(0)" class="btn btn p-3" style="background-color: #1fb79b; color:white;width:48%;" (click)="JoinEvent(x.id)" name="{{x.title+'Eventjointbutton'}}"  *ngIf="!checknojoin(x)" id="{{x.title+'Eventjointbutton'}}"> Join <i class="fa fa-plus"></i> </button>
+                              <button href="javascript:void(0)" class="btn btn-danger p-3" style=" color:white;width:48%;" (click)="QuitEvent(x.id)" name="Eventquitbutton{{x.title}}"  *ngIf="checknojoin(x)" id="Eventquitbutton{{x.title}}"> Quit <i class="fa fa-minus"></i> </button>&nbsp;
+                              <button href="javascript:void(0)" class="btn btn-danger p-3"style=" color:white;width:48%" (click)="DisLikeEvent(x.id)"> Dislike <i class="fa fa-thumbs-down"></i> </button><br><br>
                               <button href="javascript:void(0)" class="btn btn"style="background-color: #193962; color:white;width:100%" [routerLink]="['/EventDetails',x.id]"> Details <i class="fa fa-list"></i> </button>
                               
                            </div>
