Dynamic Buy badges

--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -56,6 +56,7 @@
 <li id="menu-item-187" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-187 nav-item dropdown"><a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Services<i class="fa fa-angle-down"></i></a>
   <ul class="dropdown-menu">
     <li id="menu-item-2078" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-2078 nav-item"><a href="javascript:void(0)" class=" dropdown-item" [routerLink]="['/Evenements']">Events</a></li>
+    <li id="menu-item-2078" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-2078 nav-item"><a href="javascript:void(0)" class=" dropdown-item" [routerLink]="['/Badges']">Badges</a></li>
     <li id="menu-item-2076" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-2078 nav-item"><a href="javascript:void(0)" class=" dropdown-item">Offers</a></li>
     <li id="menu-item-2077" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-2078 nav-item"><a href="javascript:void(0)" class=" dropdown-item">Subscriptions</a></li>
   </ul>
