--- a/src/app/Components/article/get-by-id-article/get-by-id-article.component.css
+++ b/src/app/Components/article/get-by-id-article/get-by-id-article.component.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bree+Serif&family=EB+Garamond:ital,wght@0,500;1,800&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
-.img_block
+/* .img_block
 {
 
-}
+} */
 .personal_comment
 {
 
@@ -27,4 +27,55 @@
   background-color: aquamarine;
   background-image: url('../../../../assets/man.png');
 
+}
+.butn_cmt
+{
+  border:none;
+  padding: 10px 20px;
+  background-color: #1fb79b;
+  color:white;
+  margin:10px;
+}
+.butn_like
+{
+  text-align: center;
+  background: #ed2553;
+  border-radius: 3px;
+  box-shadow: 0 10px 20px -8px rgb(240, 75, 113);
+  padding: 10px 17px;
+  font-size: 18px;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  color: #ffffff;
+  text-decoration: none;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+  font-family: montserrat;
+  font-size: 15px;
+
+}
+ .btn-secondary:hover {
+  transform: translateY(-3px);
+}
+ .btn-secondary .fa {
+  margin-right: 5px;
+}
+.rmv_like
+{
+  text-align: center;
+  background: #919191;
+  font-family: montserrat;
+  border-radius: 3px;
+  /*box-shadow: 0 10px 20px -8px rgb(240, 75, 113);*/
+  padding: 10px 17px;
+  font-size: 18px;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  color: #ffffff;
+  text-decoration: none;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+  font-size: 15px;
 }
