--- a/src/app/Components/article/post/post.component.html
+++ b/src/app/Components/article/post/post.component.html
@@ -1,5 +1,18 @@
 <p>post works!</p>
-<div class="d-flex flex-column">
+<app-head></app-head>
+<app-header></app-header>
+  <div class="container">
+    <div class="left_side">
+
+    </div>
+    <div class="right_side">
+
+    </div>
+  </div>
+<app-footer></app-footer>
+<app-scripts></app-scripts>
+<!--
+  <div class="d-flex flex-column">
   <button class="btn btn-primary" [routerLink]="['/add-posts']">Ajouter article</button>
 </div>
 <div class="card" *ngFor="let p of postes">
@@ -21,6 +34,8 @@
   <div>
     <button (click)="deletePost(p.idPost)" class="btn btn-danger mx-2">Delete</button>
   </div>
+-->
+
 
     <!--<div class="user">
       <img src="https://yt3.ggpht.com/a/AGF-l7-0J1G0Ue0mcZMw-99kMeVuBmRxiPjyvIYONg=s900-c-k-c0xffffffff-no-rj-mo" alt="user" />
