--- a/src/app/BackEnd/Events/updateevent/updateevent.component.html
+++ b/src/app/BackEnd/Events/updateevent/updateevent.component.html
@@ -75,7 +75,7 @@
                                         </div>
                                         <div class="col-md-8">
                                             <div class="position-relative has-icon-left">
-                                                <input type="number" id="pass-icon" class="form-control" name="contact-icon" [(ngModel)]="event.npDisponible" placeholder="Event Avariable Places" value="{{event.npDisponible}}">
+                                                <input type="number" id="pass-icon" class="form-control" name="contact-icon" [(ngModel)]="event.npMax" placeholder="Event Avariable Places" value="{{event.npDisponible}}">
                                                 <div class="form-control-position">
                                                     <i class="feather icon-users"></i>
                                                 </div>
