--- a/src/app/BackEnd/Events/show-users-likes/show-users-likes.component.html
+++ b/src/app/BackEnd/Events/show-users-likes/show-users-likes.component.html
@@ -65,13 +65,13 @@
                             style="width: 52.65px;"><input _ngcontent-nwj-c61="" type="checkbox"></th>
                         <th _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
                             colspan="1" aria-label="title: activate to sort column ascending" class="sorting"
-                            style="width: 162.917px;">title</th>
+                            style="width: 162.917px;" (click)="SortTitle()">title</th>
                         <th _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
                             colspan="1" aria-label="dateStart: activate to sort column ascending" class="sorting"
-                            style="width: 144.667px;">dateStart</th>
+                            style="width: 144.667px;" (click)="SortDateStart()">dateStart</th>
                         <th _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
                             colspan="1" aria-label="dateEnd: activate to sort column ascending" class="sorting"
-                            style="width: 169.017px;">dateEnd</th>
+                            style="width: 169.017px;" (click)="SortDateEnd()">dateEnd</th>
                             <th _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
                             colspan="1" aria-label="ACTION: activate to sort column ascending" class="sorting"
                             style="width: 92.6833px;">Delete</th>
